@@ -1,5 +1,7 @@
 s3cmd 0.9.5   -   ???
 ===========
+* Support for buckets created in Europe
+* Initial 'sync' support, for now local to s3 direction only
 * Much better handling of multiple args to put, get and del
 * Tries to use ElementTree from any available module
 * Support for buckets with over 1000 objects.
