@@ -1,3 +1,8 @@
+2007-11-13  Michal Ludvig  <michal@logix.cz>
+
+	* S3/S3.py: Support for buckets stored in Europe, access now 
+	  goes via <bucket>.s3.amazonaws.com where possible.
+
 2007-11-12  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd: Support for storing file attributes (like ownership, 
